# qenode

./: .dockerignore  .gitignore  AGENTS.md  BUILD_DEPS  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEBUG_PLAN_ARCH8.md  DOCKER_IMAGE_MIGRATION_PLAN.md  DOWNSTREAM_REUSE.md  Makefile  PLAN.md  README.md  ROADMAP_PHASE_12.md  VERSIONS  book.toml  deny.toml  docker-bake-latest.hcl  docker-bake-release.hcl  docker-bake.hcl  expanded_dummy.rs  files_with_numeric_names.txt  files_with_peripherals.txt  files_with_topology.txt  fix_mypy.py  gdb_script.txt  lint_output_2.txt  pyproject.toml  requirements.txt  run_integration_tests.py  stress_loop.sh  test_dlopen  test_dlopen.c
.cargo/: config.toml
.devcontainer/: devcontainer.json  initialize.sh  post-create.sh  post-start.sh
.github/: smoke-domains.json
docker/: Dockerfile  docker-compose.yml  entrypoint.sh  grafana-datasources.yaml  otel-collector-config.yaml
docs/: ARCHITECTURE.md  CI_GUIDE.md  COMPLETED_PHASES.md  CONTAINER_DEV_GUIDE.md  DATA_FLOW_AND_PROTOCOLS.md  README.md  SUMMARY.md  TEST_GUIDELINES.md  TIME_MANAGEMENT.md  TIMING_MODEL.md  federation-transfer-impl-prompt.md  physical-node-impl-prompt.md  physics-gateway-impl-prompt.md
hw/: meson.build
hw/rust/backbone/clock/: Cargo.toml
hw/rust/backbone/clock/src/: lib.rs
hw/rust/backbone/transport-hub/: Cargo.toml
hw/rust/backbone/transport-hub/src/: lib.rs
hw/rust/backbone/transport-uds/: Cargo.toml
hw/rust/backbone/transport-uds/src/: lib.rs  router.rs
hw/rust/backbone/transport-unix/: Cargo.toml
hw/rust/backbone/transport-unix/src/: lib.rs  router.rs
hw/rust/backbone/transport-zenoh/: Cargo.toml
hw/rust/backbone/transport-zenoh/src/: lib.rs  publisher.rs
hw/rust/bridges/uart/: Cargo.toml
hw/rust/bridges/uart/src/: lib.rs
hw/rust/buses/ethernet/: Cargo.toml
hw/rust/buses/ethernet/src/: lib.rs
hw/rust/buses/ieee802154/: Cargo.toml
hw/rust/buses/ieee802154/src/: lib.rs
hw/rust/common/rust-dummy/: Cargo.toml  README.md
hw/rust/common/rust-dummy/src/: lib.rs
hw/rust/common/virtmcu-api/: Cargo.toml
hw/rust/common/virtmcu-api/src/: can_generated.rs  core.fbs  core_generated.rs  insn_trace_generated.rs  lib.rs  lin_generated.rs  physics.fbs  physics_generated.rs  rf802154_generated.rs  rf_generated.rs  telemetry_generated.rs
hw/rust/common/virtmcu-api/src/topics/: mod.rs
hw/rust/common/virtmcu-api/tests/: firmware_studio_mock.rs  fuzz_network.rs  lifetime_tests.rs  stress_telemetry.rs  telemetry_tests.rs
hw/rust/common/virtmcu-qom/: Cargo.toml  build.rs
hw/rust/common/virtmcu-qom/src/: chardev.rs  cosim.rs  cpu.rs  device.rs  error.rs  ffi.c  icount.rs  irq.rs  lib.rs  memory.rs  net.rs  qdev.rs  qom.rs  sync.rs  sysemu.rs  telemetry.rs  timer.rs
hw/rust/common/virtmcu-qom/tests/: bindgen_lint_stress_test.rs  bql_context.rs  layout_validation.rs  mmio_wait.rs  type_registration.rs
hw/rust/examples/reference-peripheral/: Cargo.toml  README.md
hw/rust/examples/reference-peripheral/src/: lib.rs
hw/rust/mcu/s32k144-lpuart/: Cargo.toml
hw/rust/mcu/s32k144-lpuart/src/: lib.rs  lib.rs.tmp
hw/rust/observability/tcg-tracer/: Cargo.toml  build.rs
hw/rust/observability/tcg-tracer/src/: lib.rs  qemu_plugin.rs
patches/: apply_fdt_generic_util_fix.py  apply_rust_asan_fix.py  apply_sysbus_asan_fix.py  apply_zenoh_chardev.py  apply_zenoh_hook.py  apply_zenoh_netdev.py  apply_zenoh_qapi.py  qemu-multiple-halt-hooks.patch
schema/: world_schema.json
scripts/: apply-qemu-patches.sh  check-cargo-meson-lib-alignment.py  check-ffi.py  check-qom-alignment.py  check-stale-so.py  check-versions.py  check_rust_logs.py  check_schemas.sh  ci-integration-tier.sh  ci-phase.sh  cleanup-sim.sh  common.sh  run.sh  (+18 more)
tests/native_integration/: Cargo.toml  build.rs
tests/native_integration/tests/: actuator.rs  boot_arm.rs  bql_starvation.rs  canfd.rs  complex_board.rs  dummy_network.rs  federation_id.rs  flexray_bridge.rs  irq_stress.rs  jitter.rs  lin_bridge.rs  pendulum_loop.rs  pendulum_smoke.rs  plugin_multiplexing.rs  qmp.rs  reconnect.rs  reference_network.rs  riscv_complex.rs  shutdown_safety.rs  spi_bridge.rs  svd_hash_handshake.rs  svd_patch.rs  tcg_tracer.rs  telemetry_throughput.rs  telemetry_wfi.rs  uart.rs
tests/native_integration/tests/quarantine/: README.md  bql_starvation.rs  clock_suspend.rs  coordinator_stress.rs  dummy_network_bad_topology.rs  firmware_golden.rs  jitter.rs  lin_bridge.rs  mac_parsing.rs  pendulum_boot.rs  pendulum_e2e_compose.rs  pendulum_loop.rs  plugin_multiplexing.rs  qmp.rs  spi_bridge.rs  svd2header.rs  tcg_tracer.rs  telemetry_throughput.rs  uart.rs  yaml_boot_advanced.rs
tools/benchmarks/clock_rtt_bench/: Cargo.toml
tools/benchmarks/clock_rtt_bench/src/: main.rs
tools/cyber_bridge/: Cargo.toml
tools/cyber_bridge/scripts/: mock_physics.py
tools/cyber_bridge/src/: lib.rs  physics.rs  physics_transport.rs  resd_parser.rs
tools/deterministic_coordinator/: Cargo.toml
tools/deterministic_coordinator/protocol/: topics.toml
tools/deterministic_coordinator/src/: barrier.rs  coordinator.rs  lib.rs  main.rs  message_log.rs  topics.rs  topology.rs
tools/deterministic_coordinator/tests/: stress_barrier.rs  test_coordinator_state.rs  test_generated_schema.rs  test_ordering.rs  test_schema_corner_cases.rs  test_uds.rs
tools/virtmcu-cli/: Cargo.toml
tools/virtmcu-cli/src/: main.rs  patch_svd.rs  setup.rs
tools/virtmcu-coverage/: Cargo.toml
tools/virtmcu-coverage/src/: main.rs
tools/virtmcu-observability/: Cargo.toml
tools/virtmcu-observability/src/: lib.rs  processors.rs
tools/virtmcu-observability/tests/: test_processors.rs
tools/virtmcu-replay/: Cargo.toml
tools/virtmcu-replay/src/: main.rs
tools/virtmcu-test-runner/: Cargo.toml
tools/virtmcu-test-runner/src/: artifacts.rs  builder.rs  lib.rs  main.rs  monitors.rs
tools/virtmcu-test-runner/src/launcher/: mod.rs
tools/virtmcu-test-runner/src/lints/: banned_patterns.rs  magic_numbers.rs  mod.rs  qom_type_info.rs  safe_serialization.rs  static_state.rs  verify_exports.rs
tools/virtmcu-test-runner/src/qmp/: mod.rs
(+789 files in other folders)
