[workspace]
members = [
    "hw/rust/rust-dummy",
    "hw/rust/virtmcu-zenoh",
    "hw/rust/virtmcu-api",
    "hw/rust/zenoh-clock",
    "hw/rust/virtmcu-qom",
    "hw/rust/zenoh-netdev",
    "hw/rust/zenoh-chardev",
    "hw/rust/zenoh-telemetry",
    "hw/rust/zenoh-actuator",
    "hw/rust/zenoh-802154",
    "hw/rust/zenoh-ui",
    "hw/rust/zenoh-flexray",
    "hw/rust/test-qom-device",
    "hw/rust/virtmcu-test-devices",
    "hw/rust/mmio-socket-bridge",
    "hw/rust/remote-port",
    "hw/rust/zenoh-canfd",
    "hw/rust/s32k144-lpuart",
    "hw/rust/virtmcu-wifi",
    "hw/rust/zenoh-spi",
    "tools/cyber_bridge",
    "tools/zenoh_coordinator",
    "tools/deterministic_coordinator",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["virtmcu developers"]
publish = false
license = "Apache-2.0"

[workspace.dependencies]
zenoh = "1.9.0"
libc = "0.2"
flatbuffers = "25.12.19"
crossbeam-channel = "0.5"
byteorder = "1.5"
virtmcu-api = { path = "hw/rust/virtmcu-api" }
virtmcu-qom = { path = "hw/rust/virtmcu-qom" }
virtmcu-zenoh = { path = "hw/rust/virtmcu-zenoh" }

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"

[workspace.lints.rust]
unsafe_code = "allow" # We need unsafe for QOM/FFI

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
undocumented_unsafe_blocks = "deny"
missing_safety_doc = "deny"
std_instead_of_core = "deny"
std_instead_of_alloc = "deny"
alloc_instead_of_core = "deny"
todo = "warn"
unimplemented = "warn"
dbg_macro = "warn"
print_stdout = "warn"
print_stderr = "warn"
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
clone_on_ref_ptr = "deny"
# Specific pedantic lints to allow (too noisy or not applicable)
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
cast_possible_truncation = "allow" # Common in FFI
cast_precision_loss = "allow"
cast_sign_loss = "allow"
ptr_as_ptr = "allow"
doc_markdown = "allow" # Generated code has bad markdown
unreadable_literal = "allow" # Magic numbers often look like this
pub_underscore_fields = "allow" # Generated code uses this
used_underscore_binding = "allow" # Generated code uses this
borrow_as_ptr = "allow" # Common in FFI
cast_ptr_alignment = "allow" # QEMU object casting
cast_possible_wrap = "allow" # Common in timers and math
needless_pass_by_value = "allow" # Callbacks often need value semantic
single_match_else = "allow" # Sometimes clearer
bool_to_int_with_if = "allow"
manual_let_else = "allow"
cast_lossless = "allow"
ignored_unit_patterns = "allow"
