[workspace]
members = [
    "hw/rust/examples/reference-peripheral",
    "hw/rust/observability/tcg-tracer",
    "hw/rust/backbone/transport-zenoh",
    "hw/rust/backbone/transport-uds",
    "hw/rust/backbone/transport-hub",
    "hw/rust/common/virtmcu-wire",
    "hw/rust/backbone/clock",
    "hw/rust/common/virtmcu-qom",
    "hw/rust/buses/ethernet",
    "hw/rust/bridges/uart",
    "hw/rust/observability/telemetry",
    "hw/rust/physics/actuator",
    "hw/rust/physics/sensor",
    "hw/rust/buses/ieee802154",
    # "hw/rust/observability/ui",
    "hw/rust/buses/flexray",
    "hw/rust/common/test-qom-device",
    "hw/rust/common/virtmcu-test-devices",
    "hw/rust/bridges/mmio-socket-bridge",
    "hw/rust/bridges/remote-port",
    "hw/rust/buses/canfd",
    "hw/rust/mcu/s32k144-lpuart",
    "hw/rust/buses/wifi",
    # "hw/rust/buses/spi",
    # "tools/cyber_bridge",
    # "tools/zenoh_coordinator",
    "tools/deterministic_coordinator", # "tools/stress_adapter", 
    "hw/rust/common/virtmcu-zenoh-config",
    "tools/virtmcu-test-runner",
    "tools/virtmcu-run",
    # "tools/virtmcu-replay",
    "tools/virtmcu-cli",
    "tools/virtmcu-coverage",
    "tools/virtmcu-observability",
    "tools/benchmarks/clock_rtt_bench",
    "tools/yaml2qemu",
    "tests/native_integration",
     "hw/rust/common/virtmcu-qom-macros",
]
exclude = [
    "xtask",
    "third_party",
    "third_party/zenoh-c-src/build-asan/release",
    "third_party/zenoh-c-src/build-release/release",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["virtmcu developers"]
publish = false
license = "Apache-2.0"

[workspace.dependencies]
zenoh = "1.9.0"
flatbuffers = "25.12.19"
crossbeam-channel = "0.5"
byteorder = "1.5"
virtmcu-wire = { path = "hw/rust/common/virtmcu-wire" }
virtmcu-zenoh-config = { path = "hw/rust/common/virtmcu-zenoh-config" }
virtmcu-qom = { path = "hw/rust/common/virtmcu-qom" }
virtmcu-observability = { path = "tools/virtmcu-observability" }
transport-zenoh = { path = "hw/rust/backbone/transport-zenoh" }
transport-uds = { path = "hw/rust/backbone/transport-uds" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
opentelemetry            = { version = "0.27", features = ["trace", "logs"] }
opentelemetry-otlp       = { version = "0.27", features = ["trace", "logs", "grpc-tonic"] }
opentelemetry_sdk        = { version = "0.27", features = ["trace", "logs", "rt-tokio"] }
opentelemetry-appender-tracing = "0.27"
tracing-opentelemetry    = "0.28"
mcap = "0.13.0"
camino = "1.1.9"
tempfile = "3.10"

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"

[workspace.lints.rust]
unsafe_code = "allow" # We need unsafe for QOM/FFI

[workspace.lints.clippy]
await_holding_lock = "deny"
cast_lossless = "allow"
all = { level = "deny", priority = -1 }
str_to_string = "deny"
pedantic = { level = "warn", priority = -1 }
undocumented_unsafe_blocks = "allow"
missing_safety_doc = "allow"
std_instead_of_core = "deny"
std_instead_of_alloc = "deny"
alloc_instead_of_core = "deny"
todo = "deny"
unimplemented = "deny"
dbg_macro = "warn"
print_stdout = "deny"
print_stderr = "deny"
unwrap_used = "deny"
expect_used = "allow"
panic = "deny"
panic_in_result_fn = "deny"
indexing_slicing = "allow"
clone_on_ref_ptr = "deny"
# Specific pedantic lints to allow (too noisy or not applicable)
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
ptr_as_ptr = "allow"
doc_markdown = "allow" # Generated code has bad markdown
unreadable_literal = "allow" # Magic numbers often look like this
pub_underscore_fields = "allow" # Generated code uses this
used_underscore_binding = "allow" # Generated code uses this
borrow_as_ptr = "allow" # Common in FFI
cast_ptr_alignment = "allow" # QEMU object casting
cast_possible_wrap = "allow" # Common in timers and math
needless_pass_by_value = "allow" # Callbacks often need value semantic
single_match_else = "allow" # Sometimes clearer
bool_to_int_with_if = "allow"
manual_let_else = "allow"

ignored_unit_patterns = "allow"
