[project]
name = "virtmcu"
version = "0.1.0"
description = "Deterministic multi-node firmware simulation framework built on QEMU"
readme = "README.md"
requires-python = ">=3.13"
license = {file = "LICENSE"}
authors = [
    {name = "Virtmcu Team"},
]
dependencies = [
    "pyyaml==6.0.1",
    "cmsis-svd==0.6",
    "fdt==0.3.3",
    "pyelftools==0.30",
    "eclipse-zenoh==1.9.0",
    "flatbuffers==25.12.19",
    "pytest==8.3.4",
    "pytest-asyncio==1.3.0",
    "watchdog==6.0.0",
    "psutil==7.2.2",
    "typing-extensions==4.15.0",
    "mcp==1.0.0",
    "qemu.qmp==0.0.3",
    "hypothesis==6.152.1",
    "ruff==0.15.12",
    "mypy==1.20.2",
    "codespell==2.4.1",
    "yamllint==1.35.1",
    "lark==1.1.9",
    "typing-inspection==0.4.0",
    "pytest-timeout==2.3.1",
    "pytest-xdist==3.6.1",
    "pytest-cov==6.0.0",
]

[project.scripts]
virtmcu = "tools.virtmcu.main:main"

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["tools", "scripts", "packaging"]

[tool.ruff]
target-version = "py313"
line-length = 120
exclude = [
    "third_party",
    "tools/virtmcu",
    "tools/lin_fbs",
    "tools/telemetry_fbs",
    "tools/flexray_fbs",
    "tests/fixtures/guest_apps/coordinator_stress/virtmcu",
    "build/",
    "tools/systemc_adapter/build/",
    "generated/",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
    "N",      # pep8-naming
    "S",      # flake8-bandit
    "ANN",    # flake8-annotations
    "PT",     # flake8-pytest-style
    "BLE",    # flake8-blind-except
    "TID",    # flake8-tidy-imports
    "T201",   # flake8-print
    "PTH",    # flake8-use-pathlib
    "PLR2004",# pylint: magic-value-comparison
    "PLC",    # pylint convention
    "PLE",    # pylint error
    "PLW",    # pylint warning
    "SIM",    # flake8-simplify
    "ERA",    # eradicate
    "RUF",    # ruff-specific rules
    "FURB",   # refurb
]
ignore = [
    "E501",   # line-too-long
    "S603",   # subprocess untrusted input
    "PLC0415", # import should be at the top-level of a file (acceptable for deferred imports)
    "PLW1510", # subprocess.run without explicit check argument
    "SIM102",  # nested if statements (sometimes more readable)
    "RUF006",  # asyncio.create_task return value
    "PLW2901", # for loop variable overwritten
    "PLW0602", # using global for variable but no assignment is done
    "SIM115",  # context manager for opening files (sometimes acceptable)
    "SIM105",  # contextlib.suppress instead of try-except-pass
    "S607",    # starting process with partial executable path
    "RUF043",  # pattern passed to match contains metacharacters
    "PLW1641", # object does not implement __hash__ method
    "PLW0603", # using the global statement to update variable is discouraged
    "PLR2004", # magic value comparison
    "BLE001",  # blind except
    "ANN401",  # Any types
    "TID251",  # sys.path.insert
    "S108",    # insecure temp file
    "T201",    # print
    "S110",    # try-except-pass
    "N806",    # lowercase variables
    "B018",    # useless attribute access
    "SIM103",  # return condition directly
    "PTH",     # use pathlib
]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"os.chdir".msg = "Global state mutation is banned. Use pathlib and pass explicit `cwd=` to subprocesses."
"sys.path.insert".msg = "Path bootstrapping is banned. Rely on pyproject.toml and PYTHONPATH."
"sys.path.append".msg = "Path bootstrapping is banned. Rely on pyproject.toml and PYTHONPATH."

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_untyped_decorators = false
check_untyped_defs = true
show_error_codes = true
exclude = '(?x)( tools/virtmcu/ | tools/lin_fbs/ | tools/telemetry_fbs/ | tools/flexray_fbs/ | tests/fixtures/guest_apps/coordinator_stress/virtmcu/ | build/ | tools/systemc_adapter/build/ | third_party/ )'
explicit_package_bases = true

[[tool.mypy.overrides]]
module = [
    "fdt.*",
    "flatbuffers.*",
    "elftools.*",
    "gdb.*",
    "mmio_client.*",
    "yaml.*",
    "psutil.*",
    "numpy.*",
    "firmware_provenance",
]
ignore_missing_imports = true



[[tool.mypy.overrides]]
module = [
]
ignore_errors = true

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = ["S101", "PLC0415"]
"**/tools/testing/**" = ["S101", "PLC0415"]
"tools/testing/virtmcu_test_suite/generated.py" = ["N999", "E501", "UP007", "UP035", "ERA001"]
"tools/wireshark/virtmcu_extcap.py" = ["T201"]
"scripts/check_rust_logs.py" = ["T201", "S603", "S607", "ANN201", "UP015", "I001", "F401"]
"scripts/lints/environment_agnosticism.py" = ["I001"]
"scripts/lint_simulation_usage.py" = ["T201", "S603", "S607", "ANN001", "ANN201", "I001", "BLE001"]

[[tool.mypy.overrides]]
module = [
    "generated.*",
    "tools.testing.virtmcu_test_suite.generated",
]
ignore_errors = true

[tool.pytest.ini_options]
pythonpath = [
  ".",
  "generated",
]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "error",
    # Ignore third-party library warnings that we can't fix directly
    "ignore:invalid escape sequence:SyntaxWarning",
]
