[package]
name = "native-integration"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
virtmcu-test-runner = { path = "../../tools/virtmcu-test-runner" }
tokio = { version = "1.37.0", features = ["full"] }
anyhow = "1.0"
tracing-subscriber = "0.3"
sha2 = "0.10"

[build-dependencies]
