[package]
name = "cyber_bridge"
publish = false
version = "0.1.0"
edition = "2021"

[[bin]]
name = "virtmcu-time-authority"
path = "src/bin/time_authority.rs"

[[bin]]
name = "virtmcu-resd-replay"
path = "src/bin/resd_replay.rs"

[dependencies]
zenoh = "1.9.0"
virtmcu-zenoh-config.workspace = true
tokio = { version = "1.37.0", features = ["full", "macros"] }
byteorder = "1.5"
virtmcu-api = { path = "../../hw/rust/common/virtmcu-api" }
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"


[lints.clippy]
str_to_string = "deny"
