[package]
name = "virtmcu-cli"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1.37.0", features = ["full", "net"] }
zenoh = "1.9.0"
virtmcu-api = { path = "../../hw/rust/common/virtmcu-api" }
virtmcu-test-runner = { path = "../virtmcu-test-runner" }
yaml2qemu = { path = "../../hw/rust/yaml2qemu" }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "1.1"
byteorder = "1.5"
flatbuffers = "25.12.19"
futures = "0.3"
libc = "0.2"
regex = "1.12.3"

[package.metadata.cargo-machete]
ignored = ["flatbuffers", "libc"]

