[package]
name = "virtmcu-coverage"
version = "0.1.0"
edition = "2021"
authors = ["virtmcu developers"]
license = "Apache-2.0"
publish = false

[dependencies]
clap = { version = "4", features = ["derive"] }
object = "0.36"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
byteorder = "1.5"

[[bin]]
name = "virtmcu-coverage"
path = "src/main.rs"
