[package]
name = "virtmcu-observability"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
opentelemetry.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-appender-tracing.workspace = true
tracing-subscriber.workspace = true
tracing-opentelemetry.workspace = true
tokio = { version = "1.52.3", features = ["rt-multi-thread"] }
log = "0.4.29"
