[package]
name = "virtmcu-replay"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
zenoh = { workspace = true }
mcap = { workspace = true }
camino = { workspace = true }
clap = { version = "4", features = ["derive"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
virtmcu-wire = { workspace = true }
virtmcu-zenoh-config = { workspace = true }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
memmap2 = "0.9.10"

[package.metadata.cargo-machete]
ignored = [
    "zenoh",
    "mcap",
    "camino",
    "clap",
    "tracing",
    "tracing-subscriber",
    "virtmcu-wire",
    "virtmcu-zenoh-config",
    "tokio",
    "anyhow",
]
