[package]
name = "virtmcu-test-runner"
version = "0.1.0"
edition = "2021"
authors = ["virtmcu developers"]
license = "Apache-2.0"

[dependencies]
tokio = { version = "1.37.0", features = ["full"] }
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
tempfile = "3.8"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
virtmcu-api = { path = "../../hw/rust/common/virtmcu-api" }
tracing = "0.1"
tracing-subscriber = "0.3"
shellexpand = "3.1.2"
glob = "0.3.3"
libc = "0.2.186"
zenoh.workspace = true
serde_json = "1.0.149"
flatbuffers.workspace = true
async-trait = "0.1.89"
futures = "0.3.32"
yaml2qemu = { version = "0.1.0", path = "../../hw/rust/yaml2qemu" }
