[package]
name = "clock"
publish = false
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
crate-type = ["staticlib"]

[lints] 
workspace = true 

[dependencies]
virtmcu-wire.workspace = true
zenoh.workspace = true
virtmcu-qom.workspace = true
transport-zenoh.workspace = true
transport-uds = { path = "../../backbone/transport-uds" }
crossbeam-channel.workspace = true

[dev-dependencies]
tempfile = "3.8"
flatbuffers.workspace = true
