[package]
name = "transport-zenoh"
publish = false
version.workspace = true
edition.workspace = true
authors.workspace = true

[lints] 
workspace = true 

[features]
default = []
standalone = ["virtmcu-qom/standalone"]

[dependencies]
zenoh.workspace = true
virtmcu-zenoh-config.workspace = true
virtmcu-qom.workspace = true
virtmcu-wire.workspace = true
crossbeam-channel.workspace = true
