[package]
name = "uart"
publish = false
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
crate-type = ["staticlib"]
[lints] 
workspace = true 
[dependencies]
zenoh.workspace = true
virtmcu-wire.workspace = true
transport-zenoh.workspace = true
virtmcu-qom.workspace = true
transport-uds.workspace = true
crossbeam-channel.workspace = true
