[package]
name = "ieee802154"
publish = false
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
crate-type = ["staticlib"]
[lints] 
workspace = true 
[dependencies]
flatbuffers.workspace = true
zenoh.workspace = true
virtmcu-qom.workspace = true
transport-uds.workspace = true
virtmcu-wire.workspace = true
transport-zenoh.workspace = true
[package.metadata.cargo-machete]
ignored = ["zenoh", "transport-zenoh", "transport-uds", "serde", "serde_json", "tracing", "virtmcu-qom"]
