[package]
name = "rust_dummy"
publish = false
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
crate-type = ["staticlib"]



[lints] 
workspace = true 

[dependencies]
virtmcu-qom.workspace = true
virtmcu-api.workspace = true
[package.metadata.cargo-machete]
ignored = ["virtmcu-qom", "virtmcu-api"]
