[package]
name = "virtmcu-api"
publish = false
version.workspace = true
edition.workspace = true
authors.workspace = true

[lints.clippy]
ref_as_ptr = "allow"
elidable_lifetime_names = "allow"

[dependencies]
byteorder = { workspace = true }
flatbuffers.workspace = true
thiserror = "2.0"
tokio = { version = "1.37", features = ["io-util", "net", "sync", "rt", "macros"], optional = true }

[features]
default = ["std"]
std = ["tokio"]

[dev-dependencies]
proptest = "1.4.0"
virtmcu-qom = { path = "../virtmcu-qom" }
