[package]
name = "virtmcu-qom"
publish = false
version.workspace = true
edition.workspace = true
authors.workspace = true

[lints]
workspace = true

[features]
default = []
standalone = []

[dependencies]
virtmcu-api.workspace = true
crossbeam-channel = { workspace = true }
virtmcu-qom-macros = { path = "../virtmcu-qom-macros" }

[build-dependencies]
bindgen = "0.72.1"
cc = "1.2.60"

[dev-dependencies]
static_assertions = "1.1.0"
