[package]
name = "s32k144-lpuart"
publish = false
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib", "staticlib"]
[lints] 
workspace = true 
[dependencies]
zenoh.workspace = true
virtmcu-qom.workspace = true
transport-zenoh.workspace = true
transport-uds.workspace = true
virtmcu-wire.workspace = true
flatbuffers = { workspace = true }
[package.metadata.cargo-machete]
ignored = ["zenoh", "transport-zenoh", "transport-uds", "serde", "serde_json", "tracing", "virtmcu-qom"]
